changed to hit direct api gateway

--- a/tofu-v1/sample-website/index.html
+++ b/tofu-v1/sample-website/index.html
@@ -57,7 +57,7 @@
     </div>
 
     <script>
-        const API_URL = '/api/hit';
+        const API_URL = 'https://h9wwrhgkld.execute-api.us-east-1.amazonaws.com/api/hit';
 
         async function incrementCounter() {
             try {
